dataset1235/2025-2/1955397009/users/3091828991/executions/1107611404_704983377.log
== RUN (2025-08-19 12:47:28)
-- CODE: 
X = int(input("Entre com o valor de X: "))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Entre com o valor de X:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Entre com o valor de X:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Entre com o valor de X:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Entre com o valor de X:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Entre com o valor de X:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Entre com o valor de X:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:48:25)
-- CODE: 
X = int(input("Entre com o valor de X: "))
Y = int(input("Entre com o valor de y: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Entre com o valor de X: Entre com o valor de y:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Entre com o valor de X: Entre com o valor de y:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Entre com o valor de X: Entre com o valor de y:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Entre com o valor de X: Entre com o valor de y:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Entre com o valor de X: Entre com o valor de y:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Entre com o valor de X: Entre com o valor de y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:47:14)
-- CODE: 
X = int(input("Entre com o valor de X: "))
Y =
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 2
    Y =
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 2
    Y =
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 2
    Y =
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 2
    Y =
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 2
    Y =
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 2
    Y =
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:43:15)
-- CODE: 
X = int(input("Entre com o valor de X: "))
Y = int(input("Entre com o valor de Y: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:40:03)
-- CODE: 
X = int(input("Entre com o valor de X: "))
Y = int(input("Entre com o valor de Y: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:41:49)
-- CODE: 
X = int(input("Entre com o valor de X: "))
Y = int(input("Entre com o valor de y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
P = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(P)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:37:42)
-- CODE: 
X = int(input("Entre com o valor de X: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Entre com o valor de X:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Entre com o valor de X:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Entre com o valor de X:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Entre com o valor de X:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Entre com o valor de X:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Entre com o valor de X:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:41:57)
-- CODE: 
X = int(input("Entre com o valor de X: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Entre com o valor de X:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Entre com o valor de X:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Entre com o valor de X:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Entre com o valor de X:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Entre com o valor de X:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Entre com o valor de X:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:42:49)
-- CODE: 
X = int(input("Entre com o valor de X: "))
Y = int(input("Entre com o valor de y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
P = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(P)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:42:56)
-- CODE: 
X = int(input("Entre com o valor de X: "))
Y = int(input("Entre com o valor de y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
P = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(P)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 12:59:49)
-- CODE: 
X = int(input("Entre com o valor de X: "))
Y = int(input("Entre com o valor de y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
P = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(P)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 12:44:22)
-- CODE: 
X = int(input("Entre com o valor de X: "))
Y = int(input("Entre com o valor de Y: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Entre com o valor de X: Entre com o valor de Y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
